Fixed code issue to hide Homepage images on small screens

--- a/src/style.css
+++ b/src/style.css
@@ -116,3 +116,9 @@ p {
 .about-images {
   justify-content: center;
 }
+
+@media (max-width: 576px) {
+  .projects {
+    text-align: center;
+  }
+}
